--- a/style.css
+++ b/style.css
@@ -1,46 +1,14 @@
-#draggable-box {
+.box {
     position: absolute;
-    width: 100px;
-    height: 100px;
-    background-color: #007bff;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    background-color: red;
+    cursor: move;
   }
-  
-  #resize-handle {
+  .grid-overlay {
     position: absolute;
-    width: 10px;
-    height: 10px;
-    background-color: #fff;
-    bottom: 0;
-    right: 0;
-    cursor: se-resize;
-  }
-  
-  #reset-button {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-  }
-  
-  #grid-toggle {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-  }
-  
-  #grid-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
-    background-image: repeating-linear-gradient(0deg, transparent, transparent 9px, rgba(0,0,0,.1) 10px, rgba(0,0,0,.1) 20px);
+    background-image: linear-gradient(to right, transparent 1%, #888 1%, #888 99%, transparent 99%);
+    background-size: 20px 20px;
     pointer-events: none;
-    opacity: 0;
+    display: none;
   }
-  #grid-toggle:checked + #grid-overlay {
-    opacity: 1;
-  }
-  
